--- a/notebooks/vis_cnn_mnist.ipynb
+++ b/notebooks/vis_cnn_mnist.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing Convolutional Neural Network (CNN)"
+    "# CNN with TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import packages"
    ]
   },
   {
@@ -22,7 +29,7 @@
       "Extracting data/train-labels-idx1-ubyte.gz\n",
       "Extracting data/t10k-images-idx3-ubyte.gz\n",
       "Extracting data/t10k-labels-idx1-ubyte.gz\n",
-      "Network Ready to Go!\n"
+      "Packages loaded.\n"
      ]
     }
    ],
@@ -37,9 +44,33 @@
     "trainlabel = mnist.train.labels\n",
     "testimg    = mnist.test.images\n",
     "testlabel  = mnist.test.labels\n",
-    "\n",
-    "# Define convolutional neural network architecture \n",
-    "\n",
+    "print (\"Packages loaded.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define Networks\n",
+    "## tf.variable_scope(\"NAME\"):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network ready\n"
+     ]
+    }
+   ],
+   "source": [
     "# Parameters\n",
     "learning_rate   = 0.001\n",
     "training_epochs = 5\n",
@@ -63,58 +94,68 @@
     "        'bd1': tf.Variable(tf.random_normal([1024], stddev=0.1)),\n",
     "        'bd2': tf.Variable(tf.random_normal([n_output], stddev=0.1))\n",
     "    }\n",
-    "\n",
     "def conv_basic(_input, _w, _b, _keepratio):\n",
     "    # Input\n",
     "    with tf.variable_scope(\"INPUT_LAYER\"):\n",
     "        _input_r = tf.reshape(_input, shape=[-1, 28, 28, 1])\n",
-    "    \n",
     "    # Conv1\n",
     "    with tf.variable_scope(\"CNN_CONV_1\"):\n",
-    "        _conv1 = tf.nn.relu(tf.nn.bias_add(\n",
-    "                tf.nn.conv2d(_input_r, _w['wc1'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "                , _b['bc1']))\n",
+    "        _conv1 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_input_r, _w['wc1']\n",
+    "                    , strides=[1, 1, 1, 1], padding='SAME'), _b['bc1']))\n",
     "    with tf.variable_scope(\"CNN_POOL_1\"):\n",
-    "        _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "        _pool1 = tf.nn.max_pool(_conv1, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1]\n",
+    "                                , padding='SAME')\n",
     "        _pool_dr1 = tf.nn.dropout(_pool1, _keepratio)\n",
-    "    \n",
     "    # Conv2\n",
     "    with tf.variable_scope(\"CNN_CONV_2\"):\n",
-    "        _conv2 = tf.nn.relu(tf.nn.bias_add(\n",
-    "                tf.nn.conv2d(_pool_dr1, _w['wc2'], strides=[1, 1, 1, 1], padding='SAME')\n",
-    "                , _b['bc2']))\n",
+    "        _conv2 = tf.nn.relu(tf.nn.bias_add(tf.nn.conv2d(_pool_dr1, _w['wc2']\n",
+    "                    , strides=[1, 1, 1, 1], padding='SAME'), _b['bc2']))\n",
     "    with tf.variable_scope(\"CNN_POOL_2\"):\n",
-    "        _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1], padding='SAME')\n",
+    "        _pool2 = tf.nn.max_pool(_conv2, ksize=[1, 2, 2, 1], strides=[1, 2, 2, 1]\n",
+    "                                , padding='SAME')\n",
     "        _pool_dr2 = tf.nn.dropout(_pool2, _keepratio)\n",
-    "    \n",
     "    with tf.variable_scope(\"FC_1\"):\n",
     "        # Vectorize\n",
     "        _dense1 = tf.reshape(_pool_dr2, [-1, _w['wd1'].get_shape().as_list()[0]])\n",
     "        # Fc1\n",
     "        _fc1 = tf.nn.relu(tf.add(tf.matmul(_dense1, _w['wd1']), _b['bd1']))\n",
     "        _fc_dr1 = tf.nn.dropout(_fc1, _keepratio)\n",
-    "    \n",
     "    with tf.variable_scope(\"FC_2\"):\n",
     "        # Fc2\n",
     "        _out = tf.add(tf.matmul(_fc_dr1, _w['wd2']), _b['bd2'])\n",
-    "    \n",
     "    # Return everything\n",
     "    out = {\n",
-    "        'input_r': _input_r,\n",
-    "        'conv1': _conv1,\n",
-    "        'pool1': _pool1,\n",
-    "        'pool1_dr1': _pool_dr1,\n",
-    "        'conv2': _conv2,\n",
-    "        'pool2': _pool2,\n",
-    "        'pool_dr2': _pool_dr2,\n",
-    "        'dense1': _dense1,\n",
-    "        'fc1': _fc1,\n",
-    "        'fc_dr1': _fc_dr1,\n",
-    "        'out': _out\n",
-    "    }\n",
+    "        'input_r': _input_r, 'conv1': _conv1, 'pool1': _pool1, 'pool1_dr1': _pool_dr1,\n",
+    "        'conv2': _conv2, 'pool2': _pool2, 'pool_dr2': _pool_dr2, 'dense1': _dense1,\n",
+    "        'fc1': _fc1, 'fc_dr1': _fc_dr1, 'out': _out }\n",
     "    return out\n",
     "\n",
-    "\n",
+    "print (\"Network ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Functions ready\n"
+     ]
+    }
+   ],
+   "source": [
     "# tf Graph input\n",
     "x = tf.placeholder(tf.float32, [None, n_input], name=\"CNN_INPUT_x\")\n",
     "y = tf.placeholder(tf.float32, [None, n_output], name=\"CNN_TARGET_y\")\n",
@@ -127,13 +168,19 @@
     "corr = tf.equal(tf.argmax(pred,1), tf.argmax(y,1)) # Count corrects\n",
     "accr = tf.reduce_mean(tf.cast(corr, tf.float32)) # Accuracy\n",
     "init = tf.initialize_all_variables()\n",
-    "\n",
-    "print (\"Network Ready to Go!\")"
+    "print (\"Functions ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -142,22 +189,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/005 cost: 0.385811788\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.978\n",
-      "Epoch: 001/005 cost: 0.050440192\n",
-      " Training accuracy: 0.970\n",
-      " Test accuracy: 0.984\n",
-      "Epoch: 002/005 cost: 0.032644550\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.988\n",
-      "Epoch: 003/005 cost: 0.023835430\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.988\n",
-      "Epoch: 004/005 cost: 0.018812589\n",
-      " Training accuracy: 0.990\n",
-      " Test accuracy: 0.991\n",
-      "Optimization Finished.\n"
+      "Summary ready\n"
      ]
     }
    ],
@@ -165,8 +197,56 @@
     "# Do some optimizations\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
-    "summary_writer = tf.train.SummaryWriter('/tmp/tf_logs/cnn_mnist', graph=sess.graph)\n",
     "\n",
+    "# Summary writer\n",
+    "tf.scalar_summary('cross entropy', cost)\n",
+    "tf.scalar_summary('accuracy', accr)\n",
+    "merged = tf.merge_all_summaries()\n",
+    "summary_writer = tf.train.SummaryWriter('/tmp/tf_logs/cnn_mnist'\n",
+    "                                        , graph=sess.graph)\n",
+    "print (\"Summary ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start!\n",
+      "Epoch: 000/005 cost: 0.308832936\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.978\n",
+      "Epoch: 001/005 cost: 0.049046195\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.987\n",
+      "Epoch: 002/005 cost: 0.030909354\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.990\n",
+      "Epoch: 003/005 cost: 0.022986034\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Epoch: 004/005 cost: 0.017566223\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.992\n",
+      "Optimization Finished.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"Start!\")\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
     "    total_batch = int(mnist.train.num_examples/batch_size)\n",
@@ -174,10 +254,13 @@
     "    for i in range(total_batch):\n",
     "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
     "        # Fit training using batch data\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys, keepratio:0.7})\n",
+    "        summary, _ = sess.run([merged, optm]\n",
+    "                        , feed_dict={x: batch_xs, y: batch_ys, keepratio:0.7})\n",
     "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})/total_batch\n",
-    "\n",
+    "        avg_cost += sess.run(cost\n",
+    "                , feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})/total_batch\n",
+    "        # Add summary\n",
+    "        summary_writer.add_summary(summary, epoch*total_batch+i)\n",
     "    # Display logs per epoch step\n",
     "    if epoch % display_step == 0: \n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
