--- a/notebooks/vis_mlp_mnist.ipynb
+++ b/notebooks/vis_mlp_mnist.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing Multi-Layer Perceptron (MLP) "
+    "# MLP with TensorBoard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import packages"
    ]
   },
   {
@@ -22,7 +29,7 @@
       "Extracting data/train-labels-idx1-ubyte.gz\n",
       "Extracting data/t10k-images-idx3-ubyte.gz\n",
       "Extracting data/t10k-labels-idx1-ubyte.gz\n",
-      "Network Ready\n"
+      "Packages loaded\n"
      ]
     }
    ],
@@ -33,13 +40,42 @@
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "%matplotlib inline  \n",
     "mnist = input_data.read_data_sets('data/', one_hot=True)\n",
-    "\n",
+    "trainimg   = mnist.train.images\n",
+    "trainlabel = mnist.train.labels\n",
+    "testimg    = mnist.test.images\n",
+    "testlabel  = mnist.test.labels\n",
+    "print (\"Packages loaded\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define networks\n",
+    "## tf.variable_scope(\"NAME\"):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network ready\n"
+     ]
+    }
+   ],
+   "source": [
     "# Parameters\n",
     "learning_rate   = 0.001\n",
     "training_epochs = 10\n",
     "batch_size      = 100\n",
     "display_step    = 2\n",
-    "\n",
     "# Network Parameters\n",
     "n_input    = 784 # MNIST data input (img shape: 28*28)\n",
     "n_hidden_1 = 256 # 1st layer num features\n",
@@ -47,23 +83,6 @@
     "n_hidden_3 = 256 # 3rd layer num features\n",
     "n_hidden_4 = 256 # 4th layer num features\n",
     "n_classes  = 10 # MNIST total classes (0-9 digits)\n",
-    "\n",
-    "# tf Graph input\n",
-    "x = tf.placeholder(\"float\", [None, n_input], name=\"MLP_INPUT_x\")\n",
-    "y = tf.placeholder(\"float\", [None, n_classes], name=\"MLP_TARGET_y\")\n",
-    "dropout_keep_prob = tf.placeholder(\"float\", name=\"MLP_DROPOUT\")\n",
-    "\n",
-    "# Create model\n",
-    "def multilayer_perceptron(_X, _weights, _biases, _keep_prob):\n",
-    "    with tf.variable_scope(\"MLP_LAYER_1\"):\n",
-    "        layer_1 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(_X, _weights['h1']), _biases['b1'])), _keep_prob)\n",
-    "    with tf.variable_scope(\"MLP_LAYER_2\"):\n",
-    "        layer_2 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_1, _weights['h2']), _biases['b2'])), _keep_prob)\n",
-    "    with tf.variable_scope(\"MLP_LAYER_3\"):\n",
-    "        layer_3 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_2, _weights['h3']), _biases['b3'])), _keep_prob) \n",
-    "    with tf.variable_scope(\"MLP_LAYER_OUT\"):\n",
-    "        layer_4 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_3, _weights['h4']), _biases['b4'])), _keep_prob) \n",
-    "    return (tf.matmul(layer_4, _weights['out']) + _biases['out'])\n",
     "\n",
     "# Store layers weight & bias\n",
     "stddev = 0.1\n",
@@ -84,27 +103,110 @@
     "        'out': tf.Variable(tf.random_normal([n_classes]))\n",
     "    }\n",
     "\n",
-    "# Construct model\n",
-    "pred = multilayer_perceptron(x, weights, biases, dropout_keep_prob)\n",
-    "\n",
-    "# Define loss and optimizer\n",
-    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
-    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
-    "# optimizer = tf.train.MomentumOptimizer(learning_rate=learning_rate, momentum=0.8).minimize(cost) # Adam Optimizer\n",
-    "\n",
-    "# Accuracy \n",
-    "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))\n",
-    "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
-    "\n",
-    "# Initializing the variables\n",
-    "init = tf.initialize_all_variables()\n",
-    "\n",
-    "print (\"Network Ready\")\n"
+    "# Create model\n",
+    "def multilayer_perceptron(_X, _weights, _biases, _keep_prob):\n",
+    "    with tf.variable_scope(\"MLP_LAYER_1\"):\n",
+    "        layer_1 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(_X, _weights['h1'])\n",
+    "                                                  , _biases['b1'])), _keep_prob)\n",
+    "    with tf.variable_scope(\"MLP_LAYER_2\"):\n",
+    "        layer_2 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_1, _weights['h2'])\n",
+    "                                                  , _biases['b2'])), _keep_prob)\n",
+    "    with tf.variable_scope(\"MLP_LAYER_3\"):\n",
+    "        layer_3 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_2, _weights['h3'])\n",
+    "                                                  , _biases['b3'])), _keep_prob) \n",
+    "    with tf.variable_scope(\"MLP_LAYER_OUT\"):\n",
+    "        layer_4 = tf.nn.dropout(tf.nn.relu(tf.add(tf.matmul(layer_3, _weights['h4'])\n",
+    "                                                  , _biases['b4'])), _keep_prob) \n",
+    "    return (tf.matmul(layer_4, _weights['out']) + _biases['out'])\n",
+    "print (\"Network ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network Ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "# tf Graph input\n",
+    "x = tf.placeholder(\"float\", [None, n_input], name=\"MLP_INPUT_x\")\n",
+    "y = tf.placeholder(\"float\", [None, n_classes], name=\"MLP_TARGET_y\")\n",
+    "keepratio = tf.placeholder(\"float\", name=\"MLP_DROPOUT\")\n",
+    "# Construct model\n",
+    "pred = multilayer_perceptron(x, weights, biases, keepratio)\n",
+    "# Define loss and optimizer\n",
+    "cost = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(pred, y)) # Softmax loss\n",
+    "optm = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost) # Adam Optimizer\n",
+    "# Accuracy \n",
+    "corr = tf.equal(tf.argmax(pred, 1), tf.argmax(y, 1))\n",
+    "accr = tf.reduce_mean(tf.cast(corr, \"float\"))\n",
+    "# Initializing the variables\n",
+    "init = tf.initialize_all_variables()\n",
+    "print (\"Network Ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Summary ready\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Do some optimizations\n",
+    "sess = tf.Session()\n",
+    "sess.run(init)\n",
+    "\n",
+    "# Summary writer\n",
+    "tf.scalar_summary('cross entropy', cost)\n",
+    "tf.scalar_summary('accuracy', accr)\n",
+    "merged = tf.merge_all_summaries()\n",
+    "summary_writer = tf.train.SummaryWriter('/tmp/tf_logs/mlp_mnist'\n",
+    "                                        , graph=sess.graph)\n",
+    "print (\"Summary ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -114,26 +216,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 000/010 cost: 0.526723674\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 002/010 cost: 0.117184844\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 004/010 cost: 0.073468235\n",
-      "Training accuracy: 0.960\n",
-      "Epoch: 006/010 cost: 0.052521151\n",
-      "Training accuracy: 0.970\n",
-      "Epoch: 008/010 cost: 0.039561796\n",
-      "Training accuracy: 0.960\n",
+      "Start!\n",
+      "Epoch: 000/010 cost: 0.473336121\n",
+      " Training accuracy: 0.950\n",
+      " Test accuracy: 0.932\n",
+      "Epoch: 002/010 cost: 0.114191625\n",
+      " Training accuracy: 0.970\n",
+      " Test accuracy: 0.965\n",
+      "Epoch: 004/010 cost: 0.074626958\n",
+      " Training accuracy: 0.970\n",
+      " Test accuracy: 0.971\n",
+      "Epoch: 006/010 cost: 0.051695831\n",
+      " Training accuracy: 1.000\n",
+      " Test accuracy: 0.975\n",
+      "Epoch: 008/010 cost: 0.039800433\n",
+      " Training accuracy: 0.990\n",
+      " Test accuracy: 0.978\n",
       "Optimization Finished!\n"
      ]
     }
    ],
    "source": [
-    "# Launch the graph\n",
-    "sess = tf.Session()\n",
-    "sess.run(init)\n",
-    "summary_writer = tf.train.SummaryWriter('/tmp/tf_logs/mlp_mnist', graph=sess.graph)\n",
-    "\n",
+    "print (\"Start!\")\n",
     "# Training cycle\n",
     "for epoch in range(training_epochs):\n",
     "    avg_cost = 0.\n",
@@ -142,15 +246,21 @@
     "    for i in range(total_batch):\n",
     "        batch_xs, batch_ys = mnist.train.next_batch(batch_size)\n",
     "        # Fit training using batch data\n",
-    "        sess.run(optm, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob: 0.7})\n",
+    "        summary, _ = sess.run([merged, optm]\n",
+    "                , feed_dict={x: batch_xs, y: batch_ys, keepratio: 0.7})\n",
     "        # Compute average loss\n",
-    "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob:1.})/total_batch\n",
+    "        avg_cost += sess.run(cost\n",
+    "                , feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})/total_batch\n",
+    "        # Add summary\n",
+    "        summary_writer.add_summary(summary, epoch*total_batch+i)\n",
     "    # Display logs per epoch step\n",
     "    if epoch % display_step == 0:\n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
-    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys, dropout_keep_prob:1.})\n",
-    "        print (\"Training accuracy: %.3f\" % (train_acc))\n",
-    "\n",
+    "        train_acc = sess.run(accr, feed_dict={x: batch_xs, y: batch_ys, keepratio:1.})\n",
+    "        print (\" Training accuracy: %.3f\" % (train_acc))\n",
+    "        test_acc = sess.run(accr, feed_dict={x: testimg, y: testlabel, keepratio:1.})\n",
+    "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
+    "        \n",
     "print (\"Optimization Finished!\")"
    ]
   },
