--- a/notebooks/rnn_mnist_simple.ipynb
+++ b/notebooks/rnn_mnist_simple.ipynb
@@ -64,7 +64,15 @@
    "metadata": {},
    "source": [
     "<img src=\"images/etc/rnn_input1.png\" width=\"500\" height=\"200\" >\n",
-    "<img src=\"images/etc/rnn_input2.png\" width=\"500\" height=\"200\" >"
+    "<img src=\"images/etc/rnn_input2.png\" width=\"500\" height=\"200\" >\n",
+    "<img src=\"images/etc/rnn_input3.jpg\" width=\"700\" height=\"400\" >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Contruct Network"
    ]
   },
   {
@@ -78,7 +86,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Network Ready!\n"
+      "Network ready\n"
      ]
     }
    ],
@@ -88,7 +96,6 @@
     "dimhidden = 128\n",
     "dimoutput = nclasses\n",
     "nsteps    = 28\n",
-    "\n",
     "weights = {\n",
     "    'hidden': tf.Variable(tf.random_normal([diminput, dimhidden])), \n",
     "    'out': tf.Variable(tf.random_normal([dimhidden, dimoutput]))\n",
@@ -118,8 +125,46 @@
     "        'X': _X, 'H': _H, 'Hsplit': _Hsplit,\n",
     "        'LSTM_O': _LSTM_O, 'LSTM_S': _LSTM_S, 'O': _O \n",
     "    }\n",
-    "\n",
-    "# Construct Graph\n",
+    "print (\"Network ready\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Out Network looks like this"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"images/etc/rnn_mnist_look.jpg\" width=\"700\" height=\"400\" >"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Network Ready!\n"
+     ]
+    }
+   ],
+   "source": [
     "learning_rate = 0.001\n",
     "x      = tf.placeholder(\"float\", [None, nsteps, diminput])\n",
     "istate = tf.placeholder(\"float\", [None, 2*dimhidden]) #state & cell => 2x n_hidden\n",
@@ -134,8 +179,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Run!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -146,31 +198,29 @@
      "output_type": "stream",
      "text": [
       "Start optimization\n",
-      "Epoch: 000/005 cost: 0.527018040\n",
-      " Training accuracy: 0.969\n",
-      " Test accuracy: 0.914\n",
-      "Epoch: 001/005 cost: 0.138884272\n",
-      " Training accuracy: 0.969\n",
-      " Test accuracy: 0.962\n",
-      "Epoch: 002/005 cost: 0.086900273\n",
-      " Training accuracy: 0.992\n",
-      " Test accuracy: 0.972\n",
-      "Epoch: 003/005 cost: 0.059928117\n",
+      "Epoch: 000/005 cost: 0.578044054\n",
+      " Training accuracy: 0.961\n",
+      " Test accuracy: 0.891\n",
+      "Epoch: 001/005 cost: 0.158857340\n",
+      " Training accuracy: 0.961\n",
+      " Test accuracy: 0.959\n",
+      "Epoch: 002/005 cost: 0.093290744\n",
       " Training accuracy: 0.992\n",
       " Test accuracy: 0.969\n",
-      "Epoch: 004/005 cost: 0.050333965\n",
-      " Training accuracy: 0.977\n",
-      " Test accuracy: 0.968\n",
+      "Epoch: 003/005 cost: 0.073116983\n",
+      " Training accuracy: 0.953\n",
+      " Test accuracy: 0.973\n",
+      "Epoch: 004/005 cost: 0.054999572\n",
+      " Training accuracy: 0.984\n",
+      " Test accuracy: 0.978\n",
       "Optimization Finished.\n"
      ]
     }
    ],
    "source": [
-    "# Run optimization \n",
     "training_epochs = 5\n",
     "batch_size      = 128\n",
     "display_step    = 1\n",
-    "\n",
     "sess = tf.Session()\n",
     "sess.run(init)\n",
     "summary_writer = tf.train.SummaryWriter('/tmp/tensorflow_logs', graph=sess.graph)\n",
@@ -187,7 +237,6 @@
     "        # Compute average loss\n",
     "        avg_cost += sess.run(cost, feed_dict={x: batch_xs, y: batch_ys \n",
     "                                              , istate: np.zeros((batch_size, 2*dimhidden))})/total_batch\n",
-    "\n",
     "    # Display logs per epoch step\n",
     "    if epoch % display_step == 0: \n",
     "        print (\"Epoch: %03d/%03d cost: %.9f\" % (epoch, training_epochs, avg_cost))\n",
@@ -196,7 +245,6 @@
     "        testimgs = testimgs.reshape((ntest, nsteps, diminput))\n",
     "        test_acc = sess.run(accr, feed_dict={x: testimgs, y: testlabels, istate: np.zeros((ntest, 2*dimhidden))})\n",
     "        print (\" Test accuracy: %.3f\" % (test_acc))\n",
-    "\n",
     "print (\"Optimization Finished.\")"
    ]
   },
@@ -204,14 +252,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What we have done so far is to feed 28 sequences of vectors $ \\mathbf{x} \\in \\mathcal{R}^{28}$. \n",
+    "# What we have done so far is to feed 28 sequences of vectors $ \\mathbf{x} \\in \\mathcal{R}^{28}$. \n",
     "\n",
-    "What will happen if we only feed 14 sequences of $\\mathbf{x}$?"
+    "# What will happen if we only feed 14 sequences of $\\mathbf{x}$?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -221,7 +269,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " If we use 25 seqs, test accuracy becomes 0.784\n"
+      " If we use 25 seqs, test accuracy becomes 0.834\n"
      ]
     }
    ],
@@ -236,6 +284,57 @@
     "\n",
     "test_acc = sess.run(accr, feed_dict={x: testimgs_trucated, y: testlabels, istate: np.zeros((ntest, 2*dimhidden))})\n",
     "print (\" If we use %d seqs, test accuracy becomes %.3f\" % (nsteps2, test_acc))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# What's going on inside the RNN?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of 'xtest' is (5, 784)\n",
+      "Shape of 'xtest1' is (5, 28, 28)\n",
+      "Shape of 'rnnout_X' is (140, 28)\n",
+      "Shape of 'rnnout_H' is (140, 128)\n",
+      "Length of 'rnnout_Hsplit' is 28 and the shape of each item is (5, 128)\n",
+      "Length of 'rnnout_LSTM_O' is 28 and the shape of each item is (5, 128)\n",
+      "Shape of 'rnnout_O' is (5, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 5\n",
+    "# Get minibatch\n",
+    "xtest, _ = mnist.test.next_batch(batch_size)\n",
+    "# Reshape (this will go into the network)\n",
+    "xtest1 = xtest.reshape((batch_size, nsteps, diminput))\n",
+    "rnnout_X = sess.run(myrnn['X'], feed_dict={x: xtest1, istate: np.zeros((batch_size, 2*dimhidden))})\n",
+    "rnnout_H = sess.run(myrnn['H'], feed_dict={x: xtest1, istate: np.zeros((batch_size, 2*dimhidden))})\n",
+    "rnnout_Hsplit = sess.run(myrnn['Hsplit'], feed_dict={x: xtest1, istate: np.zeros((batch_size, 2*dimhidden))})\n",
+    "rnnout_LSTM_O = sess.run(myrnn['LSTM_O'], feed_dict={x: xtest1, istate: np.zeros((batch_size, 2*dimhidden))})\n",
+    "rnnout_O = sess.run(myrnn['O'], feed_dict={x: xtest1, istate: np.zeros((batch_size, 2*dimhidden))})\n",
+    "\n",
+    "print (\"Shape of 'xtest' is %s\" % (xtest.shape,))\n",
+    "print (\"Shape of 'xtest1' is %s\" % (xtest1.shape,))\n",
+    "print (\"Shape of 'rnnout_X' is %s\" % (rnnout_X.shape,))\n",
+    "print (\"Shape of 'rnnout_H' is %s\" % (rnnout_H.shape,))\n",
+    "print (\"Length of 'rnnout_Hsplit' is %s and the shape of each item is %s\" \n",
+    "       % (len(rnnout_Hsplit), rnnout_Hsplit[0].shape))\n",
+    "print (\"Length of 'rnnout_LSTM_O' is %s and the shape of each item is %s\" \n",
+    "       % (len(rnnout_LSTM_O), rnnout_LSTM_O[0].shape))\n",
+    "print (\"Shape of 'rnnout_O' is %s\" % (rnnout_O.shape,))\n"
    ]
   },
   {
